syntax = "proto3";

package user;

option java_multiple_files = true;
option java_package = "jp.inaba.grpc.user";

service FindUserMetadataBySubject {
  rpc handle (FindUserMetadataBySubjectRequest) returns (FindUserMetadataBySubjectResponse);
}

message FindUserMetadataBySubjectRequest {
  string subject = 1;
}

message FindUserMetadataBySubjectResponse {
  string userId = 1;
  string basketId = 2;
}