syntax = "proto3";

package product;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "jp.inaba.grpc.user";

service CreateUser {
  rpc handle (CreateUserRequest) returns (google.protobuf.Empty);
}

message CreateUserRequest {
  string id = 1;
  string subject = 2;
}